<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Sekura</string>
    <string name="placeholder_tbd" translatable="false">TBD</string>
    <string name="encryption_file_pick">Pick</string>
    <string name="encryption_mode_decrypt">Decrypt</string>
    <string name="encryption_mode_encrypt">Encrypt</string>
    <string name="encryption_encryption">Start</string>
    <string name="title_activity_main" translatable="false">Sekura</string>
    <string name="encryption_tab">Encryption</string>
    <string name="control_tab">SMS Control</string>
    <string name="settings_tab">Settings</string>
    <string name="about_tab">About</string>
    <string name="settings_auth_set">Set authorization</string>
    <string name="settings_auth_disable">Disable authorization</string>
    <!--main activity. -->


    <!--applock -->
    <string name="applock__description_chooser">Secure this application with a PIN or your fingerprints?</string>
    <string name="applock__description_create_pin">Create a PIN to secure this application.</string>
    <string name="applock__description_create_pin_reattempt">PINs didn\'t match. Try again.</string>
    <string name="applock__description_create_fingerprint">Scan your fingerprint to secure this application.</string>
    <string name="applock__description_create_fingerprint_paused">Fingerprint authentication canceled. Reload this content to restart.</string>
    <string name="applock__description_confirm">Re-enter your PIN to confirm.</string>
    <string name="applock__description_unlock_pin">Enter your PIN to unlock.</string>
    <string name="applock__description_unlock_fingerprint">Scan your fingerprint to unlock.</string>
    <string name="applock__description_unlock_fingerprint_help">We\'re having trouble recognizing your fingerprint: %1$s</string>

    <string name="applock__create_chooser_option_pin" translatable="false">PIN</string>
    <string name="applock__create_chooser_option_fingerprint">Fingerprint</string>

    <string name="applock__unlock_error_no_matching_pin_found">There is no saved PIN to unlock.</string>
    <string name="applock__unlock_error_match_failed">The PINs don\'t match!</string>
    <string name="applock__unlock_error_insufficient_selection">Wrong number of digits! Please try again</string>
    <string name="applock__unlock_error_retry_limit_exceeded">You failed too many times. You may try again in %1$s.</string>

    <string name="applock__toast_unlock_required">You can\'t do that</string>

    <string name="applock__password_char">" "</string>

    <string name="applock__action_settings">Open System Settings</string>

    <string name="applock__fingerprint_alias">AppLock</string>

    <string name="applock__fingerprint_error_not_enrolled">You haven\'t setup fingerprint unlocking.</string>
    <string name="applock__fingerprint_error_unrecognized">Your fingerprint wasn\'t recognized.</string>
    <string name="applock__fingerprint_error_unknown">Something weird happened.</string>
    <string name="applock__fingerprint_error_none">No fingerprints found! Enable them in your system settings.</string>
    <string name="applock__fingerprint_error_hardware">Missing fingerprint hardware?</string>
    <string name="applock__fingerprint_error_permission">Fingerprint permission required.</string>
    <string name="applock__fingerprint_error_permission_multiple">Fingerprint permission denied. Please enable fingerprint support in your system settings.</string>


    <string name="settings_root_ask">Access Root</string>
    <string name="encryption_file_input_hint">Input file</string>
    <string name="encryption_file_output_hint">Output File</string>
    <string name="encryption_password_hint">Password</string>
    <string name="encryption_mode_text">Mode</string>
    <string name="encryption_algorithm_text">Algorithm</string>
    <string name="encryption_default">Default</string>
    <string name="control_sentence">Sentence</string>
    <string name="control_remote_location">Remote location</string>
    <string name="control_remote_location_text">"Receive data about the current location of the device.\nRequired permissions: User location. "</string>
    <string name="control_global">Remote control</string>
    <string name="encryption_text">"Encrypt confidential data stored on your device.\nRequired permissions: Write/Read Storage. "</string>
    <string name="encryption_global">Encryption</string>
    <string name="control_text">"Remotely control the device. Trusted phone numbers can be set in the settings.\nRequired permissions: SMS Read/Write access. "</string>
    <string name="settings_notification_checkbox">Foreground service notification</string>
    <string name="encryption_input_error">Error: Incorrect input!</string>
    <string name="encryption_output_error">Error: Incorrect output!</string>
    <string name="encryption_successful">Encryption successful!</string>
    <string name="control_no_permission">Can\'t get required permission!</string>
    <string name="ask_permission">Permission</string>
    <string name="remote_sms_erasure">Remote SMS erasure</string>
    <string name="remote_file_erasure" translatable="false">Remote files erasure</string>
    <string name="settings_grant_permissions">Grant permissions</string>
    <string name="sms_control_phone_number">Phone number</string>
    <string name="encryption_unsuccessful">Error: Encryption failed</string>
    <string name="control_remote_erase_text">Delete all SMS remotely.\nRequired permissions: Root Access</string>
    <string name="control_remote_file_erasure_text">Delete files remotely.\nRequired permissions: Storage\nFor external storage: Root access</string>
    <string name="control_remote_file_erasure_list">Chosen files</string>
    <string name="settings_close">Close application</string>
    <string name="notification_service_title">Sekura process is running...</string>
    <string name="notification_service_content">You can disable this notification in App info > Notifications.</string>
    <string name="notification_encryption_progress">Encryption process in progress...</string>
    <string name="notification_decryption_progress">Decryption process in progress...</string>
    <string name="notification_encryption_complete">Encryption completed.</string>
    <string name="notification_decryption_complete">Decryption completed.</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="settings_auto_control">Automatic control</string>
</resources>
