<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/constraintLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".activity.ui.Tab1">

    <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
        <RelativeLayout android:layout_width="fill_parent"
                        android:layout_height="wrap_content">

            <TextView
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/encryption_text"
                    android:id="@+id/encryption_text"/>
            <View
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_below="@id/encryption_text"
                    android:background="@android:color/darker_gray"
                    android:id="@+id/encryption_separator"/>

            <EditText
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/encryption_separator"
                    android:inputType="textPersonName"
                    android:ems="12"
                    android:hint="@string/encryption_file_input_hint"
                    android:id="@+id/text_path_file"/>
            <Button
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/encryption_separator"
                    android:layout_toEndOf="@+id/text_path_file"
                    android:text="@string/encryption_file_pick"
                    android:id="@+id/button_picker_1"/>
            <EditText
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/text_path_file"
                    android:inputType="textPersonName"
                    android:ems="12"
                    android:hint="@string/encryption_file_output_hint"
                    android:id="@+id/text_path_file_decrypted"/>
            <Button
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/text_path_file"
                    android:layout_toEndOf="@+id/text_path_file_decrypted"
                    android:text="@string/encryption_file_pick"
                    android:id="@+id/button_picker_2"/>
            <EditText
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/button_picker_2"
                    android:inputType="textPassword"
                    android:ems="18"
                    android:hint="@string/encryption_password_hint"
                    android:id="@+id/password"/>
            <RadioGroup
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="60dp"
                    android:layout_below="@+id/password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:orientation="vertical"
                    android:checkedButton="@id/radio_encrypt"
                    android:id="@+id/radio_group_mode">
                <TextView
                        android:id="@+id/text_view_mode"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/encryption_mode_text"/>
                <RadioButton
                        android:layout_marginTop="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/encryption_mode_encrypt"
                        android:id="@+id/radio_encrypt"/>
                <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/encryption_mode_decrypt"
                        android:id="@+id/radio_decrypt"/>
            </RadioGroup>
            <RadioGroup
                    android:id="@+id/radio_group_algorithm"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="100dp"
                    android:layout_marginEnd="20dp"
                    android:layout_below="@+id/password"
                    android:layout_toEndOf="@+id/radio_group_mode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="start"
                    android:gravity="start"
                    android:checkedButton="@id/radio_aes">
                <TextView
                        android:id="@+id/text_view_algorithm"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/encryption_algorithm_text"
                />
                <RadioButton
                        android:layout_marginTop="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="AES"
                        android:id="@+id/radio_aes"/>
                <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="DES"
                        android:id="@+id/radio_des"/>
            </RadioGroup>

            <Button
                    android:layout_below="@id/radio_group_algorithm"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="40dp"
                    android:layout_marginBottom="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/encryption_default"
                    android:id="@+id/button_default_action"
            />
            <Button
                    android:layout_below="@id/radio_group_algorithm"
                    android:layout_marginTop="40dp"
                    android:layout_marginBottom="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_alignParentEnd="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/encryption_encryption"
                    android:id="@+id/button_encrypt_action"/>

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>