<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/constraintLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".activity.ui.Tab2">

    <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
        <RelativeLayout android:layout_width="fill_parent"
                        android:layout_height="wrap_content">
            <!--Global settings-->
            <TextView
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/control_remote_location_text"
                    android:id="@+id/sms_control_text"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_below="@id/sms_control_text"
                    android:inputType="phone"
                    android:hint="@string/sms_control_phone_number"
                    android:ems="10"
                    android:id="@+id/sms_control_number"/>
            <View
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_below="@id/sms_control_number"
                    android:background="@android:color/darker_gray"
                    android:id="@+id/sms_control_separator"/>
            <!--Remote location-->
            <CheckBox
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/sms_control_separator"
                    android:text="@string/control_remote_location"
                    android:id="@+id/remote_location_gps"/>
            <TextView
                    android:text="@string/control_remote_location_text"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/remote_location_gps"
                    android:id="@+id/remote_location_text"/>
            <EditText
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/remote_location_text"
                    android:inputType="textPersonName"
                    android:ems="12"
                    android:hint="@string/control_sentence"
                    android:id="@+id/remote_location_sentence"/>
            <View
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_below="@id/remote_location_sentence"
                    android:background="@android:color/darker_gray"
                    android:id="@+id/remote_location_separator"/>
            <!--Remote sms erasure-->
            <CheckBox
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/remote_location_separator"
                    android:text="@string/remote_sms_erasure"
                    android:id="@+id/remote_sms_erasure"/>
            <TextView
                    android:text="@string/control_remote_location_text"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/remote_sms_erasure"
                    android:id="@+id/remote_sms_erasure_text"/>
            <EditText
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/remote_sms_erasure_text"
                    android:inputType="textPersonName"
                    android:ems="12"
                    android:hint="@string/control_sentence"
                    android:id="@+id/remote_sms_erasure_sentence"/>
            <View
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_below="@id/remote_sms_erasure_sentence"
                    android:background="@android:color/darker_gray"
                    android:id="@+id/remote_sms_erasure_separator"/>
            <!--Remote file delete-->
            <CheckBox
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/remote_sms_erasure_separator"
                    android:text="@string/remote_file_erasure"
                    android:id="@+id/remote_file_erasure"/>
            <TextView
                    android:text="@string/control_remote_location_text"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/remote_file_erasure"
                    android:id="@+id/remote_file_erasure_text"/>
            <EditText
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/remote_file_erasure_text"
                    android:inputType="textPersonName"
                    android:ems="12"
                    android:hint="@string/control_sentence"
                    android:id="@+id/remote_file_erasure_sentence"/>
            <TextView
                    android:text="@string/control_remote_location_text"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/remote_file_erasure_sentence"
                    android:id="@+id/remote_file_erasure_list_text"/>
            <EditText
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/remote_file_erasure_list_text"
                    android:inputType="textPersonName"
                    android:ems="12"
                    android:hint="@string/encryption_file_input_hint"
                    android:id="@+id/remote_path_file"/>
            <Button
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/remote_file_erasure_list_text"
                    android:layout_toEndOf="@+id/remote_path_file"
                    android:text="@string/encryption_file_pick"
                    android:id="@+id/remote_path_file_picker"/>
            <Button
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/remote_path_file_picker"
                    android:layout_alignParentStart="true"
                    android:text="ADD"
                    android:id="@+id/remote_button_add"/>
            <Button
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/remote_path_file_picker"
                    android:layout_alignParentEnd="true"
                    android:text="DELETE"
                    android:id="@+id/remote_button_delete"/>
            <pl.redny.sekura.activity.ui.MyListView
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/remote_button_delete"
                    android:id="@+id/remote_file_erasure_list_view">
            </pl.redny.sekura.activity.ui.MyListView>
            <View
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_below="@id/remote_file_erasure_list_view"
                    android:background="@android:color/darker_gray"
                    android:id="@+id/remote_file_erasure_separator"/>


        </RelativeLayout>
    </ScrollView>
</RelativeLayout>